align-items css fixed

--- a/scss/post.scss
+++ b/scss/post.scss
@@ -151,9 +151,6 @@
 .card-img-overlay .btn:hover {
   background-color: red;
 }
-.align-items-start {
-  text-align: center;
-}
 .card-footer {
   border-radius: 10px;
 }
